# rust-nifki

./: Cargo.toml  HOWTO  README.md  nifki.service  url-map.txt
nifki-js/: assembler.js  example.js  index.html  keys.js  nifki.js  table.js
src/: main.rs  stylesheet.css
src/templates/: compiler-output.html  edit.html  play.html
src/templates/fragments/: edit-image.html
static/: interpreter.js  nifki.js  ops.js  value.js
wiki/Alistair/: properties.txt  source.sss
wiki/AtomRaft/: source.sss
wiki/Cybernoid/: source.sss
wiki/ItGame/: source.sss
wiki/Nifki/: properties.txt
wiki/Rick1/: source.sss
wiki/Rocks/: properties.txt  source.sss
wiki/Tom/: properties.txt  source.sss
wiki/Tom/res/: IMG5825  IMG5831  IMG5882  image
wiki/Tutorial/: properties.txt
wiki/nifki-out/: TestPage4.err
